--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script rel="text/javascript" defer src="./script.js"></script>
     <script rel="text/javascript" defer src="./dom.js"></script> -->
-    <link rel="stylesheet" href="styles.css">
-    <script defer type="text/javascript" src="./script.js"></script>
+    <link rel="stylesheet" href="./src/styles.css">
+    <script defer type="text/javascript" src="./src/script.js"></script>
     <title>Image Search App</title>
 </head>
 <body>
