changed script.js type to module from txt in index.html  and also changed scope of every code in script.js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <script rel="text/javascript" defer src="./script.js"></script>
     <script rel="text/javascript" defer src="./dom.js"></script> -->
     <link rel="stylesheet" href="./src/styles.css">
-    <script defer type="text/javascript" src="./src/script.js"></script>
+    <script defer type="module" src="./src/script.js"></script>
     <title>Image Search App</title>
 </head>
 <body>
